--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -47,8 +47,8 @@ $b-lg: 1200px; // BIGGER THAN 1200
 
 @media(max-width:$b-xs){
   .about__title_bottom {
-    font-size: 18px!important;
-    line-height: 30px!important;
+    font-size: 16px!important;
+    line-height: 24px!important;
   }
 }
 
